--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
     "devDependencies": {
-      "tailwindcss": "^3.0.12"
+        "html-minifier": "^4.0.0",
+        "tailwindcss": "^3.0.12",
+        "uglify-js": "^3.15.0"
     },
     "dependencies": {
-      "@tailwindcss/forms": "^0.4.0"
+        "@tailwindcss/forms": "^0.4.0"
     },
     "scripts": {
-      "build": "npx tailwindcss -i src/input.css -o src/output.css --minify",
-      "watch": "npx tailwindcss -i src/input.css -o src/output.css --watch",
-      "deploy": "npx tailwindcss -i src/input.css -o src/output.css --minify && firebase deploy",
-      "http": "http-server src"
+        "bundle": "node bundle.js",
+        "build": "npx tailwindcss -i src/input.css -o src/output.css --minify",
+        "watch": "npx tailwindcss -i src/input.css -o src/output.css --watch",
+        "deploy": "npm run build && npm run bundle && firebase deploy",
+        "http": "http-server src"
     }
-  }
-  
+}
