--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-    "devDependencies": {
-        "html-minifier": "^4.0.0",
-        "tailwindcss": "^3.0.12",
-        "uglify-js": "^3.15.0"
-    },
-    "dependencies": {
-        "@tailwindcss/forms": "^0.4.0"
-    },
-    "scripts": {
-        "bundle": "node bundle.js",
-        "build": "npx tailwindcss -i src/input.css -o src/output.css --minify",
-        "watch": "npx tailwindcss -i src/input.css -o src/output.css --watch",
-        "deploy": "npm run build && npm run bundle && firebase deploy",
-        "http": "http-server src"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "node .output/server/index.mjs"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "nuxt3": "latest",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.18"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.4.3",
+    "@tailwindcss/forms": "^0.4.0",
+    "axios": "^0.25.0",
+    "crypto": "^1.0.1",
+    "eth-hd-wallet": "^0.5.1",
+    "keccak": "^3.0.1",
+    "randombytes": "^2.0.6",
+    "secp256k1": "^3.8.0",
+    "twitter-api-v2": "^1.10.0"
+  }
 }
